--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div></div>
+  <div>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate hic beatae, quis dolorum accusantium similique sint delectus reprehenderit ex libero dicta nobis suscipit quos animi dolore? Maxime inventore ea eum.
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
